Move configurations to an unique external file.

--- a/sdk/web-console/frontend/src/index.html
+++ b/sdk/web-console/frontend/src/index.html
@@ -4,11 +4,11 @@
     <base href="/">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Starter Kits - Starter kits for different applications and languages">
+    <meta name="description" content="Chainode - A private blockchain network.">
     <meta name="robots" content="noindex">
     <meta name="author" content="Author">
     <meta http-equiv="cache-control" content="no-cache">
-    <title>Starter Kits</title>
+    <title>Chainode | Dashboard</title>
     <!-- CSS -->
     <!-- webpack will add here css like /css/style.css -->
 
