Improvement list and propose pages on web-console

--- a/web-console/frontend/src/index.html
+++ b/web-console/frontend/src/index.html
@@ -11,7 +11,9 @@
     <title>Chainode | Dashboard</title>
     <!-- CSS -->
     <!-- webpack will add here css like /css/style.css -->
-
+    <script type="text/javascript">
+    var BASEURL_FROM_BE = 'EMBEDDED_BASEURL';
+    </script>
   </head>
 
   <body>
